NIFI-14796 Applied PMD rules InefficientEmptyStringCheck, StringInstantiation, StringToString, UselessStringValueOf and UseStringBufferForStringAppends (#10143)
Signed-off-by: David Handermann <exceptionfactory@apache.org>